--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "migrate:revert": "npx typeorm-ts-node-commonjs migration:revert -d src/database/ormconfig.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.879.0",
     "@faker-js/faker": "^7.6.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^9.0.0",
